# BasicCppApp

./: .gitignore  CMakeLists.txt  README.md
include/: libstest.h  main.h
src/: libstest.cpp  main.cpp
